add_subdirectory(abntcodi)
add_subdirectory(adc)
add_subdirectory(adxl372_test)
add_subdirectory(ajoystick)
add_subdirectory(alarm)
add_subdirectory(apa102)
add_subdirectory(apds9960)
add_subdirectory(audio_rttl)
add_subdirectory(bastest)
add_subdirectory(battery)
add_subdirectory(bmi160)
add_subdirectory(bmp180)
add_subdirectory(bridge)
add_subdirectory(buttons)
add_subdirectory(calib_udelay)
add_subdirectory(camera)
add_subdirectory(can)
add_subdirectory(canard)
add_subdirectory(cctype)
add_subdirectory(charger)
add_subdirectory(chat)
add_subdirectory(chrono)
add_subdirectory(configdata)
add_subdirectory(cpuhog)
add_subdirectory(cromfs)
add_subdirectory(dac)
add_subdirectory(dhcpd)
add_subdirectory(dhtxx)
add_subdirectory(discover)
add_subdirectory(djoystick)
add_subdirectory(elf)
add_subdirectory(embedlog)
add_subdirectory(esp32_himem)
add_subdirectory(fb)
add_subdirectory(fboverlay)
add_subdirectory(flash_test)
add_subdirectory(flowc)
add_subdirectory(foc)
add_subdirectory(ft80x)
add_subdirectory(ftpc)
add_subdirectory(ftpd)
add_subdirectory(fxos8700cq_test)
add_subdirectory(gpio)
add_subdirectory(gps)
add_subdirectory(hdc1008_demo)
add_subdirectory(hello)
add_subdirectory(helloxx)
add_subdirectory(hidkbd)
add_subdirectory(hts221_reader)
add_subdirectory(i2schar)
add_subdirectory(i2sloop)
add_subdirectory(igmp)
add_subdirectory(ina219)
add_subdirectory(ina226)
add_subdirectory(ini_dumper)
add_subdirectory(ipcfg)
add_subdirectory(ipforward)
add_subdirectory(json)
add_subdirectory(leds)
add_subdirectory(lis3dsh_reader)
add_subdirectory(lsm303_reader)
add_subdirectory(lsm330spi_test)
add_subdirectory(lsm6dsl_reader)
add_subdirectory(lvgldemo)
add_subdirectory(max31855)
add_subdirectory(media)
add_subdirectory(mld)
add_subdirectory(mlx90614)
add_subdirectory(modbus)
add_subdirectory(modbusmaster)
add_subdirectory(module)
add_subdirectory(mount)
add_subdirectory(mqttc)
add_subdirectory(mtdpart)
add_subdirectory(mtdrwb)
add_subdirectory(netlink_route)
add_subdirectory(netloop)
add_subdirectory(netpkt)
add_subdirectory(nettest)
add_subdirectory(nrf24l01_btle)
add_subdirectory(nrf24l01_term)
add_subdirectory(null)
add_subdirectory(nunchuck)
add_subdirectory(nx)
add_subdirectory(nxdemo)
add_subdirectory(nxflat)
add_subdirectory(nxhello)
add_subdirectory(nximage)
add_subdirectory(nxlines)
add_subdirectory(nxterm)
add_subdirectory(nxtext)
add_subdirectory(obd2)
add_subdirectory(oneshot)
add_subdirectory(pca9635)
add_subdirectory(pdcurses)
add_subdirectory(pf_ieee802154)
add_subdirectory(pipe)
add_subdirectory(poll)
add_subdirectory(popen)
add_subdirectory(posix_spawn)
add_subdirectory(powerled)
add_subdirectory(powermonitor)
add_subdirectory(pppd)
add_subdirectory(pty_test)
add_subdirectory(pwfb)
add_subdirectory(pwlines)
add_subdirectory(pwm)
add_subdirectory(qencoder)
add_subdirectory(random)
add_subdirectory(relays)
add_subdirectory(rfid_readuid)
add_subdirectory(rgbled)
add_subdirectory(romfs)
add_subdirectory(rpmsgsocket)
add_subdirectory(sendmail)
add_subdirectory(serialblaster)
add_subdirectory(serialrx)
add_subdirectory(serloop)
add_subdirectory(slcd)
add_subdirectory(smps)
add_subdirectory(sotest)
add_subdirectory(stat)
add_subdirectory(sx127x_demo)
add_subdirectory(system)
add_subdirectory(tcpblaster)
add_subdirectory(tcpecho)
add_subdirectory(telnetd)
add_subdirectory(termios)
add_subdirectory(thttpd)
add_subdirectory(tiff)
add_subdirectory(timer)
add_subdirectory(touchscreen)
add_subdirectory(udgram)
add_subdirectory(udp)
add_subdirectory(udpblaster)
add_subdirectory(uid)
add_subdirectory(unionfs)
add_subdirectory(usbserial)
add_subdirectory(userfs)
add_subdirectory(usrsocktest)
add_subdirectory(ustream)
add_subdirectory(veml6070)
add_subdirectory(watchdog)
add_subdirectory(watched)
add_subdirectory(watcher)
add_subdirectory(webserver)
add_subdirectory(wget)
add_subdirectory(wgetjson)
add_subdirectory(xbc_test)
add_subdirectory(xmlrpc)
add_subdirectory(zerocross)
