add_subdirectory(chat)
add_subdirectory(cjson)
add_subdirectory(codecs)
add_subdirectory(dhcpc)
add_subdirectory(dhcpd)
add_subdirectory(discover)
add_subdirectory(esp8266)
add_subdirectory(ftpc)
add_subdirectory(ftpd)
add_subdirectory(iperf)
add_subdirectory(libcurl4nx)
add_subdirectory(mqttc)
add_subdirectory(netcat)
add_subdirectory(netinit)
add_subdirectory(netlib)
add_subdirectory(ntpclient)
add_subdirectory(ping)
add_subdirectory(pppd)
add_subdirectory(smtp)
add_subdirectory(telnetc)
add_subdirectory(telnetd)
add_subdirectory(tftpc)
add_subdirectory(thttpd)
add_subdirectory(usrsock_rpmsg)
add_subdirectory(webclient)
add_subdirectory(webserver)
add_subdirectory(xmlrpc)
