add_subdirectory(cxxtest)
add_subdirectory(fatutf8)
add_subdirectory(fstest)
add_subdirectory(getprime)
add_subdirectory(irtest)
add_subdirectory(ltp)
add_subdirectory(mm)
add_subdirectory(nxffs)
add_subdirectory(ostest)
add_subdirectory(scanftest)
add_subdirectory(sensortest)
add_subdirectory(smart)
add_subdirectory(smart_test)
add_subdirectory(smp)
add_subdirectory(unity)
